--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <body>
   <div class="container">
     <h2 class="mb-4"><B>Formulaire de Présence Shift 23h-07h</B></h2>
+       <a href="dashboard.html" class="btn btn-link">Dashboard</a>  </div>
     <form id="presenceForm">
       <div class="form-row">
         <div class="form-group col-md-2">
